--- a/front_end/src/App.scss
+++ b/front_end/src/App.scss
@@ -52,6 +52,8 @@
     z-index: 99;
     .container {
       display: flex;
+      flex-grow: 1;
+      overflow: auto;
       justify-content: center;
       align-items: center;
       background-color: #fff;
