--- a/front_end/src/components/login/style.scss
+++ b/front_end/src/components/login/style.scss
@@ -1,6 +1,7 @@
 .base-container {
     width: 100%;
-    height: 100%;
+    position: absolute;
+    top: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,9 +25,11 @@
 
         .form {
             margin: 2em;
+            flex-grow: 1;
             display: flex;
             flex-direction: column;
             align-items: center;
+            overflow: auto;
 
             .form-group {
                 display: flex;
@@ -58,7 +61,7 @@
         }
     }
 
-    .footer {
+    .button {
         margin-top: 3em;
     }
 }
