--- a/front_end/src/App.scss
+++ b/front_end/src/App.scss
@@ -124,3 +124,26 @@
       outline: none;
     }
   }
+
+*::-webkit-scrollbar-track
+{
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.6);
+    background-color: #CCCCCC;
+}
+
+*::-webkit-scrollbar
+{
+    width: 10px;
+    background-color: #F5F5F5;
+}
+
+*::-webkit-scrollbar-thumb
+{
+    background-color: #FFF;
+    background-image: -webkit-linear-gradient(90deg,
+                                              #b19cd9 0%,
+                                              #b19cd9 25%,
+                                              transparent 100%,
+                                              #b19cd9 75%,
+                                              transparent)
+}
