--- a/front_end/src/App.scss
+++ b/front_end/src/App.scss
@@ -63,7 +63,7 @@
       z-index: 99;
       width: 100%;
       height: 100%;
-      z-index: 99;
+      // z-index: 99;
       padding: 17px 10px;
       //transition: transform 200ms ease-in-out;
     }
