--- a/front_end/src/components/ProfileView/ProfileView.css
+++ b/front_end/src/components/ProfileView/ProfileView.css
@@ -32,8 +32,8 @@
     .profileView-container .images {
         width: 400px;
         margin-top: 10px;
-        background-color: #ebcfc1;
-        border-color: #ebcfc1;
+        background-color: #b19cd9;
+        border-color: #b19cd9;
         border-style: solid;
         border-width: 30px;
       }
@@ -50,7 +50,7 @@
     }
 
     .profileView-container .right-panel button{
-        background-color: #ff6666;
+        background-color: #b19cd9;
         color: whitesmoke;
         border-radius: 50%;
         font-size: 30px;
@@ -58,8 +58,8 @@
     }
     .profileView-container .right-panel button:hover{
         background: transparent;
-        color: #ff6666;
-        border: 2px solid #ff6666;
+        color: #b19cd9;
+        border: 2px solid #b19cd9;
         }
       
       .profileView-container .details {
