--- a/front_end/src/App.scss
+++ b/front_end/src/App.scss
@@ -128,22 +128,26 @@
 *::-webkit-scrollbar-track
 {
     box-shadow: inset 0 0 6px rgba(0,0,0,0.6);
-    background-color: #CCCCCC;
+    background-color: #966fd6;
+    width: 10px;
 }
 
 *::-webkit-scrollbar
 {
-    width: 10px;
-    background-color: #F5F5F5;
+    width: 20px;
+    background-color: #966fd6;
 }
 
 *::-webkit-scrollbar-thumb
 {
+    box-shadow: inset 0 0 2px rgba(0,0,0,0.6);
+    width: 10px;
     background-color: #FFF;
-    background-image: -webkit-linear-gradient(90deg,
-                                              #b19cd9 0%,
-                                              #b19cd9 25%,
-                                              transparent 100%,
-                                              #b19cd9 75%,
-                                              transparent)
+    border-radius: 10px;
+    // background-image: -webkit-linear-gradient(90deg,
+    //                                           #b19cd9 0%,
+    //                                           #b19cd9 25%,
+    //                                           transparent 100%,
+    //                                           #b19cd9 75%,
+    //                                           transparent)
 }
