--- a/front_end/src/components/Input/Input.css
+++ b/front_end/src/components/Input/Input.css
@@ -3,7 +3,7 @@
 	border-top: 2px solid #D3D3D3;
   }
   
-  .input {
+  .chatinput {
 	border: none;
 	border-radius: 0;
 	padding: 5%;
@@ -11,7 +11,7 @@
 	font-size: 1.2em;
   }
   
-  input:focus, textarea:focus, select:focus{
+  .chatinput:focus, textarea:focus, select:focus{
 	outline: none;
   }
   
