--- a/front_end/src/components/Join/Join.css
+++ b/front_end/src/components/Join/Join.css
@@ -31,12 +31,12 @@ html, body {
 	width: 100%;
   }
   
-  .heading {
+  /* .heading {
 	color: white;
 	font-size: 2.5em;
 	padding-bottom: 10px;
 	border-bottom: 2px solid white;
-  }
+  } */
   
   .button {
 	  color: #fff !important;
